fix: rename api_methods to api_actions
